# Techbiome

./: README.md  docker-compose.secure.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  security.py
backend/app/api/: __init__.py  alerts.py  certificates.py  commands.py  devices.py  firmware.py  health.py  logs.py  telemetry.py  utils.py
backend/app/db/: models.py  session.py
backend/app/workers/: __init__.py  alert_worker.py  mqtt_bridge.py
backend/scripts/: mosquitto.conf  mosquitto.secure.conf  mqtt.acl
docs/: architecture.md  data-model.md  security.md
docs/c4/: component.mmd  container.mmd  context.mmd  index.c4
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  layout.jsx  main.jsx
frontend/src/components/: SolarGlobeWidget.css  SolarGlobeWidget.jsx  StatCard.jsx  alarms.jsx  backend-status-overview.jsx  brightness.jsx  device-list.jsx  device-log-viewer.jsx  linechart.jsx
frontend/src/hooks/: useAppSettings.jsx  useBrightnessData.js  useDeviceCount.js  useFakeSensorData.js
frontend/src/pages/: Alerts.jsx  Dashboard.jsx  Devices.jsx  Firmware.jsx  Logs.jsx  Settings.jsx
frontend/src/styles/: theme.css
frontend/src/test/: renderApp.jsx  setup.js
infra/caddy/: Caddyfile
